<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/switch_to_attendance"
        android:icon="@drawable/ic_spellcheck_black_48dp"
        android:orderInCategory="2"
        android:title="@string/switch_to_attendance_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_mark_button"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:orderInCategory="1"
        android:title="@string/add_mark_button"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_student_marks"
        android:orderInCategory="100"
        android:title="@string/add_student_menu_label"
        app:showAsAction="never" />

</menu>