<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAssignmentActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="495dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/assignment_type_textView"
            style="@style/CreateTermTextViews"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:text="@string/assignment_type_label"
            app:layout_constraintBottom_toBottomOf="@+id/assignment_type_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/assignment_type_spinner" />

        <TextView
            android:id="@+id/maximum_mark_textView"
            style="@style/CreateTermTextViews"
            android:layout_width="116dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:text="@string/assignment_maximum_label"
            app:layout_constraintBottom_toBottomOf="@+id/maximum_mark_editView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/new_assignment_description_textView"
            style="@style/CreateTermTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_description"
            app:layout_constraintBottom_toBottomOf="@+id/description_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/description_editText" />

        <TextView
            android:id="@+id/new_assignment_title_lable_textView"
            style="@style/CreateTermTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_title_label"
            app:layout_constraintBottom_toBottomOf="@+id/title_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_editText" />

        <EditText
            android:id="@+id/title_editText"
            android:hint="@string/assignment_title_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider3"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/assignment_type_spinner"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/title_editText"
            app:layout_constraintStart_toStartOf="@+id/title_editText"
            app:layout_constraintTop_toBottomOf="@+id/title_editText" />

        <EditText
            android:id="@+id/maximum_mark_editView"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/assignment_maximum_hint"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider3"
            app:layout_constraintTop_toBottomOf="@+id/new_assignment_choose_date_button" />

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/assignment_description_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider3"
            app:layout_constraintTop_toBottomOf="@+id/maximum_mark_editView" />

        <TextView
            android:id="@+id/new_assignment_choose_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/assignment_date_label"
            style="@style/CreateTermTextViews"
            app:layout_constraintBottom_toBottomOf="@+id/new_assignment_choose_date_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/new_assignment_choose_date_button" />

        <Button
            android:id="@+id/new_assignment_choose_date_button"
            style="@style/CreateTermButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorAccent"
            android:text="@string/change_date_button"
            app:layout_constraintStart_toEndOf="@+id/divider3"
            app:layout_constraintTop_toBottomOf="@+id/assignment_type_spinner" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>