<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTermActivity">

    <Button
        android:id="@+id/set_term_start_button"
        style="@style/CreateTermButtons"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_date_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/term_begins_textview"
        style="@style/CreateTermTextViews"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/term_begins"
        app:layout_constraintBottom_toBottomOf="@+id/set_term_start_button"
        app:layout_constraintEnd_toStartOf="@+id/set_term_start_button"
        app:layout_constraintTop_toTopOf="@+id/set_term_start_button" />

    <TextView
        android:id="@+id/term_ends_textview"
        style="@style/CreateTermTextViews"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/term_ends"
        app:layout_constraintBottom_toBottomOf="@+id/set_term_end_button"
        app:layout_constraintEnd_toEndOf="@+id/term_begins_textview"
        app:layout_constraintTop_toTopOf="@+id/set_term_end_button" />

    <Button
        android:id="@+id/set_term_end_button"
        style="@style/CreateTermButtons"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/change_date_button"
        app:layout_constraintEnd_toEndOf="@+id/set_term_start_button"
        app:layout_constraintStart_toStartOf="@+id/set_term_start_button"
        app:layout_constraintTop_toBottomOf="@+id/set_term_start_button" />

    <TextView
        android:id="@+id/what_you_are_teaching_textview"
        style="@style/CreateTermTextViews"
        android:text="@string/what_you_are_teaching"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/new_term_periods_view"
        android:layout_width="match_parent"
        android:layout_height="321dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_you_are_teaching_textview" />

    <Button
        android:id="@+id/add_period_button"
        style="@style/CreateTermButtons"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_period_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_term_periods_view" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintGuide_end="433dp" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/confirm_term_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>